INCLUDES = -I$(top_srcdir)/src/include
noinst_LIBRARIES = libgamegui.a
libgamegui_a_SOURCES = action.c align.c bin.c box.c clipping.c container.c \
	dialog.c entry.c frame.c hbox.c image.c label.c option.c select.c \
	seperatorh.c seperatorv.c signal.c system.c vbox.c viewport.c \
	widget.c edit.c scrollbarv.c ticker.c
